<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appversion">2.0.0</string>
	<string name="versio_teksti">Sovellusversio:</string>
    <string name="app_name">Virkiä Alppi &amp; Freestyle</string>



	<string name="etusivu_teksti">Hei viime kaudella mukana olleet, jotka eivät ole vielä ilmoittautuneet, ilmoittakaa Kaleville, että hankitteko kausikortin vai kertalipun harjoitusten ajaksi.\nPS. Jos sähköposti-info ei tullut perille, ota yhteyttä Kaleviin!\n\nKauden 2014-2015 ryhmien muodostaminen käynnissä. Tarvittaessa ilmottautumiskaavakkeen voit ladata alla olevasta napista painamalla.\n\nJos olit mukana viime kaudella, eivätkä yhteystietosi ole muuttuneet, sinun ei tarvitse täyttää ilmottautumiskaavaketta.\n\nUutena ryhmänä Lautailuryhmä!\n\nTiedustelut Kalevilta!</string>

    <string name="etusivu_nappi">Ajankohtaista</string>

    <string name="ryhma_nappi">Ryhmät</string>
	<string name="tapahtuma_nappi">Tapahtumat</string>
	<string name="linkit_nappi">Linkit</string>
	<string name="treeniaikataulu_nappi">Treeniaikataulu</string>
	<string name="freestyle_nappi">Freestyle</string>
	<string name="yhteistyo_nappi">Yhteistyökumppanit</string>



    <string name="ryhma_teksti">Freestyle / Alppi ryhmä ykkönen (Jarkko)\nFreestyle / Alppi ryhmä kakkonen (Joona/Santeri)\nFreestyle ryhmä jatkava ryhmä (Ari/Kalevi)\nFreestyle Expert -ryhmä (Chris/Valtteri)\nAlppihiihto, Expert -ryhmä (Tuomo\nLumilautaryhmä (Kalevi)</string>
	<string name="ryhma_teksti2">RATARYHMÄ/KILPARYHMÄ\n\nTuomo Mäkinen\n  -Edistynyt Taso\n  -Ratalaskeminen\n  -Kilpailut\n  -Tiedon ja Taidon jakaminen muille nuorille</string>

    <string name="ryhma_lisatieto_nappi">Lisätietoja tästä</string>



    <string name="tapahtuma_teksti">Menneitä Tapahtumia:\n\n\nPM Kisat maaliskuussa 2014\n\nPM Pujottelu\nSimpsiöllä 23.3.2014.</string>
	<string name="tapahtuma_nappi_tulokset">Tulokset</string>
	<string name="tapahtuma_teksti2">\nPM Suurpujottelu\nSimpsiöllä 23.3.2014.</string>

	<string name="tapahtuma_tulos_nappi1">PM Suurpujottelu 16.3.13</string>
	<string name="tapahtuma_tulos_nappi2">Simpsiö 25v Juhlakilpailu</string>
	<string name="tapahtuma_tulos_nappi3">PM Syöksy 17.2.10</string>
	<string name="tapahtuma_tulos_nappi4">PM Syöksy 12.2.11</string>
	<string name="tapahtuma_tulos_nappi5">PM Pujottelu Öjberget</string>
	<string name="tapahtuma_tulos_nappi6">PM Suurpujottelu 11.2.12</string>
	<string name="tapahtuma_tulos_nappi7">PM Super-G 24.3.10</string>
	<string name="tapahtuma_tulos_nappi8">PM Super-G 8.3.11</string>



    <string name="linkit_instagram">Instagram</string>
    <string name="linkit_facebook">Facebook</string>
    <string name="linkit_twitter">Twitter</string>
    <string name="linkit_virkia">Lapuan Virkiä</string>
	<string name="linkit_simpsio">Simpsiön Rinnehiihtokeskus</string>
	<string name="linkit_joupiska">Joupiska</string>
	<string name="linkit_sjh">Seinäjoen Hiihtoseura</string>
	<string name="linkit_skisport">Skisport Finland</string>
	<string name="linkit_lifestyleskiing">LifestyleSkiing Crew</string>
	<string name="linkit_simpsiopark">Simpsiö Park - Facebook sivu</string>



	<string name="freestyle_teksti">Jatkamme hyvin alkaneen freestyle toiminnan kehitystä. Valmentat ovat hakeneet lisäkoulutusta lajiin liittyen. Lisäksi olemme saaneet muutaman valmentajan lisää.\n\nKaikki lajista kiinnostuneet tervetuloa oppimaan ja pitämään hauskaa! Aluksi riittää lasketteluvälineet, kypärä ja taito osata mennä hissillä ylös ja laskea alas itsenäisesti.\n\nAloittelevana laskijana mahdollisuus tulla seuran toimintaan mukaan Hiihtokoulun kautta. Lisätietoja alla olevasta napista.</string>
	<string name="freestyle_lisätieto_nappi">Lisätietoja tästä</string>
    <string name="freestyle_teksti2">Seuran valmennusmaksu = 100 euroa/kausi.(Hintaan sisältyy Ski passi)\n\nSeuran jäsenenä voit myös hankkia kausikortin (toimii Simpsiöllä ja Joupiskalla) puoleen hintaan normaalista seuran kautta. Voit tarkistaa hinnat alapuolella olevasta napista painamalla.\n\nVaihtoehtoisesti mahdollisuus myös kertalippuun harjoitusten ajaksi, mikäli kausikorttia ei halua hankkia. (12 euroa/kerta)</string>
    <string name="freestyle_ski_passi_nappi">Lisätietoa Ski Passista</string>
    <string name="freestyle_lippuhinnat_nappi">Hissilippujen Hinnat</string>



    <string name="tulossapian">Tulossa Pian!</string>



	<string name="yhteystiedot_teksti">Yhteystiedot</string>
	<string name="tietoja_teksti">Tietoja</string>

    <string name="puhelu_nappi">Puhelu</string>
    <string name="viesti_nappi">Viesti</string>
    <string name="sposti_nappi">Sähköposti</string>

    <string name="yht_ryhmat">Ryhmät:</string>
    <string name="yht_mainostus">Mainostus:</string>
    <string name="yht_kilpailut">Kilpailut:</string>
    <string name="yht_tiedotus">Tiedotus ja jaostot:</string>
    <string name="yht_ryhmavastaavat">Ryhmävastaavat:</string>

    <string name="kalevi_nimi">Kalevi Ahokas</string>
    <string name="kalevi_puh">0500663634</string>
    <string name="kalevi_viesti">0500663634</string>
    <string name="kalevi_sposti">kalevi.ahokas@netikka.fi</string>

    <string name="ari_nimi">Ari Mustola</string>
    <string name="ari_puh">0400861318</string>
    <string name="ari_viesti">0400861318</string>
    <string name="ari_sposti">ari.mbr@nic.fi</string>

    <string name="tuomo_nimi">Tuomo Mäkinen</string>
    <string name="tuomo_puh">0405581501</string>
    <string name="tuomo_viesti">0405581501</string>
    <string name="tuomo_sposti">tuomo.makinen@hotmail.fi</string>

    <string name="timo_nimi">Timo Parviainen</string>
    <string name="timo_puh">0405439188</string>
    <string name="timo_viesti">0405439188</string>
    <string name="timo_sposti">timo.parviainen@netikka.fi</string>

    <string name="jarkko_nimi">Jarkko Kettula</string>
    <string name="jarkko_puh">0405821617</string>
    <string name="jarkko_viesti">0405821617</string>
    <string name="jarkko_sposti">jarkko.kettula@primapower.com</string>

    <string name="chris_nimi">Chris Mustola</string>
    <string name="chris_puh">0400289961</string>
    <string name="chris_viesti">0400289961</string>
    <string name="chris_sposti">chris.mustola@gmail.com</string>
	<string name="chris_sposti_dev">bettehem@gmail.com</string>
	
    <string name="valtteri_nimi">Valtteri Kivistö</string>
    <string name="valtteri_puh">0505703244</string>
    <string name="valtteri_viesti">0505703244</string>
    <string name="valtteri_sposti">valtsu962009@hotmail.com</string>

    <string name="yht_ryhmavastaavat_lisateksti">Lisäksi Ryhmävastaavina toimivat Kalevi, Tuomo ja Ari</string>

    <string name="viestiohje">Kirjoita viestisi tähän</string>
    <string name="viesti_lahetys_nappi">Lähetä Viesti</string>

    <string name="viesti_teksti_kalevi">Viesti Kaleville</string>
    <string name="viesti_teksti_ari">Viesti Arille</string>
    <string name="viesti_teksti_tuomo">Viesti Tuomolle</string>
    <string name="viesti_teksti_timo">Viesti Timolle</string>
    <string name="viesti_teksti_jarkko">Viesti Jarkolle</string>
    <string name="viesti_teksti_chris">Viesti Chrisille</string>
    <string name="viesti_teksti_valtteri">Viesti Valtterille</string>

    <string name="tyhja_viesti">Tyhjä viesti! Kirjoita jotain ensin!</string>
    <string name="viesti_lahetetty">Viesti Lähetetty!</string>
    <string name="ilmottautumislomake_nappi">Ilmottautumislomake tästä</string>



    <string name="tietoja_sovelluksesta">\nSovelluksen kehittäjä:\nChris Mustola\n\nTämä sovellus on tehty www.virkia-alppi.net -verkkosivujen pohjalta mobiililaitteille sopivaksi.\nSovellukseen on lisätty ominaisuuksia, joita ei olisi mahdollista toteuttaa selaimessa, ja sovellusta voi myös käyttää ilman minkäänlaista verkkoyhteyttä!\n\n\n\nHaluatko yrityksellesi vastaavan sovelluksen?\nOta yhteyttä kehittäjään:</string>


</resources>
