<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:id="@+id/tausta">

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/freestyle_nappi"
		android:layout_width="wrap_content"
		android:layout_gravity="center"
		android:textSize="30sp"
		android:textColor="#FFFFFF"
		android:gravity="center"/>

	<ScrollView
		android:layout_height="match_parent"
		android:layout_width="match_parent">

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:orientation="vertical">

			<TextView
				android:layout_height="wrap_content"
				android:text="@string/freestyle_teksti"
				android:layout_width="match_parent"
				android:layout_gravity="center"
				android:gravity="center"
				android:textColor="#FFFFFF"
				android:textSize="30sp"/>

			<Button
				android:layout_height="wrap_content"
				android:text="@string/freestyle_lisätieto_nappi"
				android:layout_width="match_parent"
				android:gravity="center"
				android:layout_gravity="center"
				android:id="@+id/freestyleLisatietoNappi"
                style="@style/Nappi"/>

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/freestyle_teksti2"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp"/>

            <Button
                android:layout_height="wrap_content"
                android:text="@string/freestyle_ski_passi_nappi"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/freestyleSkiPassiNappi"
                style="@style/Nappi"/>

            <Button
                android:layout_height="wrap_content"
                android:text="@string/freestyle_lippuhinnat_nappi"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/freestyleHissilippuNappi"
                style="@style/Nappi"/>

		</LinearLayout>

	</ScrollView>

</LinearLayout>

